// ============================================================
//  Sticker Album 2026 – DBML Schema  v2
//  Mejoras aplicadas:
//    #2  Eliminado is_duplicate (derivado de quantity > 1)
//    #3  missing_stickers convertida a VIEW (nota al pie)
//    #4  trade_stickers con enum trade_side (offering/requesting)
//    #5  users.coins con nota de CHECK >= 0
//    #6  stickers con nota de CHECK por tipo
//    #10 UNIQUE en users.email y users.username
//    #11 UNIQUE en stickers.code
//    #12 updated_at en tablas clave
//    #13 deleted_at (soft delete) en users, stickers, trades
// ============================================================

enum sticker_type {
    player
    team
    badge
    collectible
}

enum sticker_rarity {
    common
    rare
    epic
    legendary
}

enum trade_status {
    pending
    accepted
    rejected
    cancelled
}

enum purchase_status {
    pending
    completed
    failed
}

// #4 – dirección de cada figurita dentro de un trade
enum trade_side {
    offering    // lo que el usuario pone en la mesa
    requesting  // lo que el usuario quiere recibir
}

Table countries [headercolor: #175e7a] {
    id        int          [pk, increment, unique]
    name      varchar(100) [not null]
    fifa_code varchar(10)
    flag_url  varchar(10) [not null]
}

Table sticker_categories [headercolor: #175e7a] {
    id          int         [pk, increment, unique]
    name        varchar(50) [not null]
    description text
}

Table sticker_packs [headercolor: #175e7a] {
    id               int          [pk, increment, unique]
    name             varchar(50) [not null]
    // precio en coins — sin decimales, siempre > 0
    price_coins      int          [not null, note: 'CHECK price_coins > 0']
    sticker_quantity int          [default: 7, note: 'CHECK sticker_quantity > 0']
    release_date     date         [not null]
}

Table achievements [headercolor: #175e7a] {
    id           int          [pk, increment, unique]
    title        varchar(100) [not null]
    description  text       [not null]
    reward_coins int          [note: 'CHECK reward_coins >= 0']
}

// ── Usuarios ──────────────────────────────────────────────────

Table users [headercolor: #175e7a] {
    id            UNIQUEIDENTIFIER [pk, increment, unique]
    // #10: username y email deben ser únicos
    username      varchar(50)  [not null, unique]
    email         varchar(100) [not null, unique]
    password_hash varchar(255) [not null]
    country_id    int
    // #5: nunca negativo
    coins         int          [not null, default: 0, note: 'CHECK coins >= 0']
    created_at    datetime2    [default: `now()`]
    updated_at    datetime2    [default: `now()`]   // #12
    // #13: soft delete — NULL = activo
    deleted_at    datetime2
}

// ── Equipos y Jugadores ───────────────────────────────────────

Table teams [headercolor: #175e7a] {
    id           int          [pk, increment, unique]
    country_id   int
    name         varchar(100) [not null]
    group_letter char(1)      [not null]
    first_coach_name   varchar(20)  [not null]
    last_coach_name    varchar(20)  [not null]
}

Table players [headercolor: #175e7a] {
    id            int         [pk, increment, unique]
    team_id       int
    first_name    varchar(50)   [not null]
    last_name     varchar(50)   [not null]
    jersey_number int   [not null]
    position      varchar(30)   [not null]
    birth_date    date  [not null]
}

// ── Álbum ────────────────────────────────────────────────────

Table albums [headercolor: #175e7a] {
    id                    UNIQUEIDENTIFIER [pk, increment, unique]
    user_id               UNIQUEIDENTIFIER
    completion_percentage decimal(5,2)   [default: 0, note: 'CHECK BETWEEN 0 AND 100']
    completed_at          datetime2
    created_at            datetime2      [default: `now()`]
    updated_at            datetime2      [default: `now()`]  // #12
}

// ── Figuritas ─────────────────────────────────────────────────

Table stickers [headercolor: #175e7a] {
    id                 int            [pk, increment, unique]
    // #11: código de negocio único (ej: "ARG-10", "BADGE-01")
    code               varchar(20)    [not null, unique]
    name               varchar(100)   [not null]
    sticker_type       sticker_type   [not null]
    rarity             sticker_rarity [not null]
    category_id        int
    // #6: player_id requerido si sticker_type = 'player'
    player_id          int            [note: 'NOT NULL when sticker_type = player']
    // #6: team_id requerido si sticker_type = 'team'
    team_id            int            [note: 'NOT NULL when sticker_type = team']
    image_url          varchar(255)
    market_value_coins int            [note: 'CHECK >= 0']
    created_at         datetime2      [default: `now()`]
    // #13: soft delete para figuritas descontinuadas
    deleted_at         datetime2
}

// ── Apertura de Sobres ────────────────────────────────────────

Table pack_openings [headercolor: #175e7a] {
    id        UNIQUEIDENTIFIER        [pk, increment, unique]
    user_id   UNIQUEIDENTIFIER
    pack_id   int
    opened_at datetime2 [default: `now()`]
}

Table pack_opening_stickers [headercolor: #175e7a] {
    id              int [pk, increment, unique]
    pack_opening_id UNIQUEIDENTIFIER
    sticker_id      int
}

// ── Figuritas del Álbum ───────────────────────────────────────
// #2: is_duplicate eliminado — se deriva de quantity > 1

Table album_stickers [headercolor: #175e7a] {
    id          int       [pk, increment, unique]
    album_id    UNIQUEIDENTIFIER
    sticker_id  int
    // duplicado si quantity > 1
    quantity    int       [not null, default: 1, note: 'CHECK quantity >= 1']
    obtained_at datetime2 [default: `now()`]
    updated_at  datetime2 [default: `now()`]  // #12

    indexes {
        (album_id, sticker_id) [unique, name: 'uq_album_stickers']
    }
}

// ── missing_stickers ──────────────────────────────────────────
// #3: Esta tabla fue reemplazada por una VIEW en PostgreSQL.
//     Se mantiene aquí como referencia conceptual del modelo.
//     La vista calcula: stickers sin entrada en album_stickers para ese álbum.
//
// Table missing_stickers { ... }  <-- eliminada


// ── Trades ────────────────────────────────────────────────────

Table trades [headercolor: #175e7a] {
    id               UNIQUEIDENTIFIER        [pk, increment, unique]
    sender_user_id   UNIQUEIDENTIFIER
    receiver_user_id UNIQUEIDENTIFIER
    trade_status     trade_status [not null, default: 'pending']
    created_at       datetime2    [default: `now()`]
    updated_at       datetime2    [default: `now()`]  // #12
    completed_at     datetime2
    // #13: soft delete
    deleted_at       datetime2

    note: 'CHECK sender_user_id <> receiver_user_id'
}

// #4: trade_side clarifica la dirección de cada figurita
Table trade_stickers [headercolor: #175e7a] {
    id                 int        [pk, increment, unique]
    trade_id           UNIQUEIDENTIFIER
    sticker_id         int
    offered_by_user_id int
    // offering = lo que pone en la mesa / requesting = lo que quiere recibir
    trade_side         trade_side [not null]
    quantity           int        [not null, default: 1, note: 'CHECK quantity >= 1']
}

// ── Compras (en coins) ────────────────────────────────────────

Table purchases [headercolor: #175e7a] {
    id              UNIQUEIDENTIFIER             [pk, increment, unique]
    user_id         UNIQUEIDENTIFIER
    // total en coins — sin decimales
    total_coins     int            [not null, note: 'CHECK total_coins > 0']
    purchase_status purchase_status [not null, default: 'pending']
    purchased_at    datetime2      [default: `now()`]
    updated_at      datetime2      [default: `now()`]  // #12
}

Table purchase_items [headercolor: #175e7a] {
    id             int [pk, increment, unique]
    purchase_id    UNIQUEIDENTIFIER
    pack_id        int
    quantity       int [not null, default: 1, note: 'CHECK quantity >= 1']
    subtotal_coins int [not null, note: 'CHECK subtotal_coins >= 0']
}

// ── Logros ────────────────────────────────────────────────────

Table user_achievements [headercolor: #175e7a] {
    id             int       [pk, increment, unique]
    user_id        UNIQUEIDENTIFIER
    achievement_id int
    unlocked_at    datetime2 [default: `now()`]

    indexes {
        (user_id, achievement_id) [unique, name: 'uq_user_achievements']
    }
}
// ============================================================
// MÓDULOS DE NEGOCIO (ARQUITECTURA N-CAPAS MODULAR)
// ============================================================

TableGroup user_module {
    Note: 'Gestión de usuarios, autenticación y monedas'

    users
}

TableGroup world_cup_module {
    Note: 'Información oficial del mundial'

    countries
    teams
    players
}

TableGroup catalog_module {
    Note: 'Catálogo maestro de figuritas'

    sticker_categories
    stickers
}

TableGroup album_module {
    Note: 'Álbum virtual y progreso del usuario'

    albums
    album_stickers
}

TableGroup pack_module {
    Note: 'Compra y apertura de sobres'

    sticker_packs
    pack_openings
    pack_opening_stickers
}

TableGroup commerce_module {
    Note: 'Compras e intercambios'

    purchases
    purchase_items

    trades
    trade_stickers
}

TableGroup achievement_module {
    Note: 'Sistema de logros'

    achievements
    user_achievements
}

// ── REFERENCIAS ───────────────────────────────────────────────

Ref fk_countries_users:       countries.id       < users.country_id            [delete: no action, update: no action]
Ref fk_users_albums:          users.id           - albums.user_id              [delete: no action, update: no action]
Ref fk_countries_teams:       countries.id       < teams.country_id            [delete: no action, update: no action]
Ref fk_teams_players:         teams.id           < players.team_id             [delete: no action, update: no action]
Ref fk_categories_stickers:   sticker_categories.id < stickers.category_id    [delete: no action, update: no action]
Ref fk_players_stickers:      players.id         < stickers.player_id         [delete: no action, update: no action]
Ref fk_teams_stickers:        teams.id           < stickers.team_id           [delete: no action, update: no action]
Ref fk_users_pack_openings:   users.id           < pack_openings.user_id      [delete: no action, update: no action]
Ref fk_packs_pack_openings:   sticker_packs.id   < pack_openings.pack_id      [delete: no action, update: no action]
Ref fk_openings_pos:          pack_openings.id   < pack_opening_stickers.pack_opening_id [delete: no action, update: no action]
Ref fk_stickers_pos:          stickers.id        < pack_opening_stickers.sticker_id      [delete: no action, update: no action]
Ref fk_albums_album_stickers: albums.id          < album_stickers.album_id    [delete: no action, update: no action]
Ref fk_stickers_album_stickers: stickers.id      < album_stickers.sticker_id  [delete: no action, update: no action]
Ref fk_users_trades_sender:   users.id           < trades.sender_user_id      [delete: no action, update: no action]
Ref fk_users_trades_receiver: users.id           < trades.receiver_user_id    [delete: no action, update: no action]
Ref fk_trades_trade_stickers: trades.id          < trade_stickers.trade_id    [delete: no action, update: no action]
Ref fk_stickers_trade_stickers: stickers.id      < trade_stickers.sticker_id  [delete: no action, update: no action]
Ref fk_users_trade_stickers:  users.id           < trade_stickers.offered_by_user_id [delete: no action, update: no action]
Ref fk_users_purchases:       users.id           < purchases.user_id          [delete: no action, update: no action]
Ref fk_purchases_items:       purchases.id       < purchase_items.purchase_id [delete: no action, update: no action]
Ref fk_packs_items:           sticker_packs.id   < purchase_items.pack_id     [delete: no action, update: no action]
Ref fk_users_achievements:    users.id           < user_achievements.user_id  [delete: no action, update: no action]
Ref fk_achievements_users:    achievements.id    < user_achievements.achievement_id [delete: no action, update: no action]
